--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -1,4 +1,4 @@
-<section class="player-bar" ng-controller="PlayerBarCtrl as playerBar">
+<section ng-show="playerBar.songPlayer.currentSong" class="player-bar" ng-controller="PlayerBarCtrl as playerBar">
   <div class="container">
     <div class="control-group main-controls">
       <a class="previous" ng-click="playerBar.songPlayer.previous()">
@@ -20,8 +20,8 @@
 </div>
 <div class="control-group currently-playing">
   <h2 class="song-name"></h2>
-            <h2 class="></h2>
-            <h3 class="></h3>
+            <h2 class=""></h2>
+            <h3 class=""></h3>
   <div class="seek-control">
     <div class="seek-bar">
       <div class="fill"></div>
@@ -33,10 +33,7 @@
 </div>
 <div class="control-group volume">
   <span class="icon ion-volume-high"></span>
-  <div class="seek-bar">
-    <div class="fill"></div>
-    <div class="thumb"></div>
-  </div>
+  <seek-bar></seek-bar>
 </div>
 </div>
 </section>
