--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -26,9 +26,8 @@
     <div class="seek-bar">
       <div class="fill"></div>
       <div class="thumb"></div>
-    </div>
-    <div class="current-time">{{ playerBar.songPlayer.currentTime }}</div>
-    <div class="total-time">{{ playerBar.songPlayer.currentSong.duration }}</div>
+     <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
+     <div class="total-time">{{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
   </div>
 </div>
 <div class="control-group volume">
