--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -19,20 +19,17 @@
 </a>
 </div>
 <div class="control-group currently-playing">
-  <h2 class="song-name"></h2>
-            <h2 class=""></h2>
-            <h3 class=""></h3>
+  <h2 class="song-name">{{playerBar.songPlayer.currentSong.title}}</h2>
+  <h2 class="artist-song-mobile">{{playerBar.albumData.artist}} - {{playerBar.songPlayer.currentSong.title}}</h2>
+  <h3 class="artist-name">{{playerBar.albumData.artist}}</h3>
   <div class="seek-control">
-    <div class="seek-bar">
-      <div class="fill"></div>
-      <div class="thumb"></div>
-     <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
-     <div class="total-time">{{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
+    <seek-bar value="{{ playerBar.songPlayer.currentTime }}" max="{{ playerBar.songPlayer.currentSong.duration }}" on-change="playerBar.songPlayer.setCurrentTime(value)"></seek-bar>
+    <div class="current-time">{{ playerBar.songPlayer.currentTime | timecode }}</div>
+    <div class="total-time">{{ playerBar.songPlayer.currentSong.duration | timecode }}</div>
   </div>
 </div>
 <div class="control-group volume">
   <span class="icon ion-volume-high"></span>
   <seek-bar value="{{ playerBar.songPlayer.volume }}" max=100 on-change="playerBar.songPlayer.setVolume(value)"></seek-bar>
-</div>
 </div>
 </section>
